fixed footer to text align center

--- a/static/css/winedora.css
+++ b/static/css/winedora.css
@@ -44,6 +44,7 @@ body {
 }
 .menu_wrap {
   text-align: center;
+  padding-top: 20px;
 }
 /*.navbar ul.nav.main_menu, .navbar ul.nav.main_menu li, .navbar ul.nav.main_menu a {
     height: 50px;
@@ -56,6 +57,7 @@ body {
 } */
 .menu_wrap ul.nav li {
   display: inline;
+  margin-right: 20px;
 }
 
 #parties {
